refactor: address review feedback
- replace the single-field ListElementCascade record with a Class<?> component
- use downstreamDeclarativeVariableMetamodel() for inverse sources
- add the explicit previous/next direction check
- make the fixed-point assertion recompute with a forced arbitrary graph,
  independent of the graph under test
- represent head vehicles with null fact collections in the test domains
  and drop the unnecessary shadow variable pre-initialization; the tests
  now pin the real bootstrap cost (one extra pass per vehicle chain level)